--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     }
   },
   "dependencies": {
-    "@monterosa/react-native-parallax-scroll": "^1.8.0",
     "react": "16.8.6",
     "react-native": "0.60.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-paper": "^2.16.0",
+    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0"
   },
