--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,6 +2,7 @@ platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 target 'libraphry' do
+  
   # Pods for libraphry
   pod 'React', :path => '../node_modules/react-native/'
   pod 'React-Core', :path => '../node_modules/react-native/React'
@@ -29,5 +30,9 @@ target 'libraphry' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
-
+  
+  # Google Firebase MLKit
+  pod 'Firebase/MLVision'
+  pod 'Firebase/MLVisionBarcodeModel'
+  
 end
